--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,8 @@
     <string name="app_name">LimassolShops</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="button_send" />
-    <string name="select" />
+    <string name="button_send"></string>
+    <string name="select"></string>
+    <string name="title_activity_third">ThirdActivity</string>
 
 </resources>
